# argus_gst_tf_plugin

./: CMakeLists.txt  gsttfdetect.cpp
